--- a/HWC.ipynb
+++ b/HWC.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyP+QrI1ygHihgU6BVLVfUGf",
+      "authorship_tag": "ABX9TyPhyaHzJ0SEmCB55PivGY6g",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1090,7 +1090,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### **Vision transformer**"
+        "### **ChatGPT Example of possible structure of code**"
       ],
       "metadata": {
         "id": "jAvB7z-8VsdG"
@@ -1128,7 +1128,7 @@
       "metadata": {
         "id": "9cImU4W-WoK_"
       },
-      "execution_count": null,
+      "execution_count": 75,
       "outputs": []
     },
     {
@@ -1162,7 +1162,7 @@
       "metadata": {
         "id": "jn2ASAWmXXQv"
       },
-      "execution_count": null,
+      "execution_count": 76,
       "outputs": []
     },
     {
@@ -1217,7 +1217,7 @@
       "metadata": {
         "id": "puQwU9BziG76"
       },
-      "execution_count": 53,
+      "execution_count": 77,
       "outputs": []
     },
     {
@@ -1242,6 +1242,15 @@
       ],
       "metadata": {
         "id": "HkiI4LcniJcf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "ztW5hH0MeIjn"
       },
       "execution_count": null,
       "outputs": []
@@ -1297,11 +1306,11 @@
         "print(len(test[0]))"
       ],
       "metadata": {
-        "id": "a25UuLXOC47O",
-        "outputId": "3b049f86-7e7e-48b9-eefb-af7eccaa7347",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "a25UuLXOC47O",
+        "outputId": "3b049f86-7e7e-48b9-eefb-af7eccaa7347"
       },
       "execution_count": 71,
       "outputs": [
